# overture-geocode

./: .gitignore  README.md  SPEC.md  TODO.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
.github/actions/apply-d1-updates/: action.yml
.github/workflows/: ci.yml  deploy-rust-worker.yml  deploy.yml  rebuild-db-reusable.yml  rebuild-db-swap.yml  rebuild-r2-shards.yml  schema-rebuild.yml
clients/js/: README.md  package-lock.json  package.json  tsconfig.json
clients/js/examples/: advanced-usage.ts  basic-usage.ts
clients/js/src/: duckdb-query.ts  index.test.ts  index.ts  stac.test.ts  stac.ts
clients/python/: pyproject.toml
clients/python/examples/: advanced_usage.py  basic_usage.py
clients/python/overture_geocoder/: __init__.py  client.py
clients/python/tests/: conftest.py  test_client.py
crates/: Cargo.toml
crates/geocoder-cli/: Cargo.toml
crates/geocoder-cli/src/: main.rs
crates/geocoder-core/: Cargo.toml
crates/geocoder-core/src/: database.rs  error.rs  lib.rs  types.rs
crates/geocoder-core/src/query/: bias.rs  fts.rs  merge.rs  mod.rs
crates/geocoder-core/tests/: search_integration.rs
crates/geocoder-worker/: Cargo.toml  README.md  wrangler.toml
crates/geocoder-worker/src/: handlers.rs  lib.rs  stac.rs
docs/: REBUILD_OPTIMIZATION_PLAN.md  index.html
scripts/: build_divisions_index.py  build_divisions_reverse_index.py  build_index.py  build_shards.py  check_release.sh  create_test_fixture.py  diff_and_update.py  download_addresses.sh  download_addresses.sql  download_divisions.sh  download_divisions.sql  download_divisions_area.sql  download_divisions_global.sql  download_divisions_reverse.sql  export_to_sql.py  fetch_prod_versions.sh  init_metadata.sql  setup-local-db.sh  stac.py  update_wrangler_binding.py  upload_shards.sh  upload_to_d1.sh
src/: worker.ts
tests/e2e/: lookup.test.ts  search.test.ts
workers/geocoder-r2/: package-lock.json  package.json  wrangler.toml
workers/geocoder-r2/src/: index.ts  wasm.d.ts
