[package]
name = "geocoder-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core geocoding engine for Overture Maps data"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# rusqlite 0.38+ supports both native and wasm32-unknown-unknown
rusqlite = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
